--- a/server/composer.json
+++ b/server/composer.json
@@ -5,7 +5,7 @@
     "license": "ISC",
     "autoload": {
         "psr-4": {
-            "Imsamaritan\\Server\\": "src/"
+            "getwebcreations\\server\\": "src/"
         }
     },
     "authors": [
